--- a/templates/searchSettingsInner.html
+++ b/templates/searchSettingsInner.html
@@ -1,6 +1,6 @@
 <form method="post" action="searchSettings">
 
-	<h2>Search Depth</h2>
+	<h2>Depth</h2>
 
 	<!-- depth radio buttons -->
 	<div class="row">
