spruce up textPrioritize

--- a/templates/textPrioritize.html
+++ b/templates/textPrioritize.html
@@ -77,10 +77,22 @@
 
            <h1>Prioritize Texts</h1>
            <br>
+			<p>
+				The following is a roughly chronological presentation of texts in the corpus.
 
-           <p>The following is a roughly chronological presentatation of texts in the corpus (numbers in square brackets give the document count for each — a rough measure of size). Only those texts selected here will be subjected to detailed similarity comparison (namely, with TF-IDF vectors and Smith-Waterman alignment) and returned as top similarity matches in docExplore and docCompare modes.</p>
-
-           <p>Changes you make will remain valid for your personal browser session, i.e., until cookies and other site data are cleared.</p>
+				Only those texts selected here will be subjected to detailed similarity comparison
+				— namely, with TF-IDF vectors and Smith-Waterman alignment —
+				and returned as top similarity matches in docExplore and docCompare modes.
+			</p>
+			<p>
+				Numbers in square brackets give the document count for each text.
+				As variation in document size is fairly well distributed,
+				this gives a good rough idea of relative text size.
+			</p>
+			<p>
+				Changes you make will remain valid for your personal browser session,
+				i.e., until cookies and other site data are cleared.
+			</p>
 
            {{ textPrioritizeInner_HTML | safe }}
 
