spruce up index

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
       		<form method="get" action="textView">
       			<input type="submit" class="btn btn-block btn-primary" value="View Texts" />
       		</form>
-			<p style="text-align:center;"><i>Start with a whole text <br> and click to explore individual passages</i></p>
+			<p style="text-align:center;"><i>Scroll freely through a whole text <br> and click to explore individual passages</i></p>
 			<p style="text-align:center;"><a href="textView?text_abbrv=NBhū#104,6">example</a></p>
       	</div>
       	<div class="col-md-3">
@@ -109,13 +109,13 @@
 				<form method="get" action="textPrioritize">
 					<input type="submit" class="btn btn-block btn-primary" value="Prioritize Texts" />
 				</form>
-				<p style="text-align:center;"><i>Limit results to certain texts of interest</i></p>
+				<p style="text-align:center;"><i>Limit similarity search <br> to certain texts of interest</i></p>
 			</div>
 			<div class="col-md-3">
 				<form method="get" action="searchSettings">
-					<input type="submit" class="btn btn-block btn-primary" value="Adjust Search Settings" />
+					<input type="submit" class="btn btn-block btn-primary" value="Configure Search Depth" />
 				</form>
-				<p style="text-align:center;"><i>Choose desired search depth <br> and corresponding wait time</i></p>
+				<p style="text-align:center;"><i>Adjust settings for search depth <br> and corresponding wait time</i></p>
 			</div>
 		</div>
 
