correction post-db

--- a/templates/textPrioritize.html
+++ b/templates/textPrioritize.html
@@ -80,9 +80,7 @@
 			<p>
 				The following is a roughly chronological presentation of texts in the corpus.
 
-				Only those texts selected here will be subjected to detailed similarity comparison
-				— namely, with TF-IDF vectors and Smith-Waterman alignment —
-				and returned as top similarity matches in docExplore and docCompare modes.
+				Only the texts selected here will be included in similarity results in docExplore and docCompare modes.
 			</p>
 			<p>
 				Numbers in square brackets give the document count for each text.
