change search "settings" to "depth"

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
 
 	    <br><br>
 
-      <h2>Search settings</h2>
+      <h2>Search Settings</h2>
       <br>
 
 		<div class="row">
@@ -112,7 +112,7 @@
 				<p style="text-align:center;"><i>Limit similarity search <br> to certain texts of interest</i></p>
 			</div>
 			<div class="col-md-3">
-				<form method="get" action="searchSettings">
+				<form method="get" action="searchDepth">
 					<input type="submit" class="btn btn-block btn-primary" value="Configure Search Depth" />
 				</form>
 				<p style="text-align:center;"><i>Adjust settings for search depth <br> and corresponding wait time</i></p>
