--- a/templates/searchDepth.html
+++ b/templates/searchDepth.html
@@ -75,19 +75,19 @@
 
         <div class="container">
 
-           <h1>Search Settings</h1>
+           <h1>Search Depth</h1>
 
            </br>
 
 			<p>
 				Here you can modify the depth of the document similarity search.
-			   There are two depth levels for you to configure and switch between as you find useful
-			   ("shallow" and "deep").
+				There are two depth levels for you to configure and switch between as you find useful
+				("shallow" and "deep").
 		   </p>
 
 		   </br>
 
-           {{ searchSettingsInner_HTML | safe }}
+           {{ searchDepthInner_HTML | safe }}
 
 			<h2>More info</h2>
 
