--- a/templates/searchDepthInner.html
+++ b/templates/searchDepthInner.html
@@ -1,6 +1,6 @@
-<form method="post" action="searchSettings">
+<form method="post" action="searchDepth">
 
-	<h2>Depth</h2>
+	<h2>Depth Level</h2>
 
 	<!-- depth radio buttons -->
 	<div class="row">
@@ -29,7 +29,7 @@
 	<!-- save changes button -->
 	<div class="row">
 		<div class="col-md-3">
-			<input id="search_settings_submit_button" type="submit" class="btn btn-block btn-primary" value="Save Changes"/>
+			<input id="search_depth_submit_button" type="submit" class="btn btn-block btn-primary" value="Save Changes"/>
 		</div>
 	</div>
 
@@ -38,7 +38,7 @@
 </br></br>
 
 
-<form method="post" id="search_settings_reset" action="searchSettings">
+<form method="post" id="search_depth_reset" action="searchDepth">
 
 	<h2>Reset to Default Values</h2>
 
@@ -47,8 +47,8 @@
 
 	<div class="row">
 		<div class="col-md-3">
-			<input type="hidden" name="search_settings_use_defaults" id="search_settings_use_defaults"/>
-			<input id="search_settings_reset_submit_button" type="submit" class="btn btn-block btn-primary" value="Reset Search Settings"/>
+			<input type="hidden" name="search_depth_use_defaults" id="search_depth_use_defaults"/>
+			<input id="search_depth_reset_submit_button" type="submit" class="btn btn-block btn-primary" value="Reset Search Depths"/>
 		</div>
 	</div>
 
