grey, extra whitespace, typos, semicolons, commas, case

--- a/templates/BrucheionAlign.html
+++ b/templates/BrucheionAlign.html
@@ -164,7 +164,7 @@
 
         	<br><br>
 
-            {{ Brucheion_HTML_body | safe }}
+            {{ brucheion_HTML_body | safe }}
 
         </div><!-- container-fluid -->
 
