feat: display version in app

--- a/templates/about.html
+++ b/templates/about.html
@@ -127,6 +127,7 @@
 
             <h2>Technical</h2>
             <br>
+            <p>app version: {{ app_version }}</p>
             <p>code and documentation on GitHub
                 <ul>
                     <li><a href="https://github.com/tylergneill/vatayana">vātāyana</a> (intertextuality research environment)</li>
