--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,8 @@
 
     	<h2>Technical</h2>
     	<br>
-    	<p>documentation on GitHub
+		<p>app version: {{ app_version }}</p>
+		<p>documentation on GitHub
     		<ul>
     			<li><a href="https://github.com/tylergneill/vatayana">vātāyana</a> (intertextuality research environment)</li>
     			<li><a href="https://github.com/tylergneill/pramana-nlp">pramāṇa-nlp</a> (philosophical Sanskrit corpus + preliminary LDA analyis)</li>
