chore: remove useless "Composite Alignment Score"

--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -126,14 +126,14 @@
 
 	<div class="col-md-6">
 		<h2>Topic Analysis</h2>
-		<img id="plot" src="/assets/doc_plot_pngs/$doc_id_1.png" alt="oops" width="550" height="385">
+		<img id="plot1" src="/assets/doc_plot_pngs/$doc_id_1.png" alt="oops" width="550" height="385">
 		$top_topics_summary_1
 	</div>
 
 
 	<div class="col-md-6">
 		<h2>Topic Analysis</h2>
-		<img id="plot" src="/assets/doc_plot_pngs/$doc_id_2.png" alt="oops" width="550" height="385">
+		<img id="plot2" src="/assets/doc_plot_pngs/$doc_id_2.png" alt="oops" width="550" height="385">
 		$top_topics_summary_2
 	</div>
 
@@ -158,10 +158,7 @@
 				<td><h2><small>Smith-Waterman Alignment Score<span title="based on char-level comparison of best word-level match">*</span></small></h2></td>
 				<td><h2><small>$sw_w_align_score</small></h2></td>
 			</tr>
-			<tr>
-				<td><h2><small>Composite Alignment Score<span title="char-level, Needleman-Wunsch primed with Smith-Waterman, number of chars highlighted dark green">*</span></small></h2></td>
-				<td><h2><small>$sw_nw_score</small></h2></td>
-			</tr>
 		</table>
 	</span>
-	</br></br>
+</div>
+</br></br>
