chore: spruce doc enumeration text

--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small>within <em>$doc_id_1_work_name</em> $text_1_doc_pos of $text_1_doc_count</small>
+		  <small>within <em>$doc_id_1_work_name</em>:<br>doc #$text_1_doc_pos of $text_1_doc_count</small>
 		</div>
 
 		<div class="col-md-2">
@@ -103,9 +103,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small id="sim-status-left">
-			most similar #$sim_rank_of_1_for_2 of $N_sw_w for <em>$doc_id_2</em>
-		  </small>
+		  <small>for <em>$doc_id_2</em>:<br>most similar #$sim_rank_of_1_for_2 of $N_sw_w</small>
 		</div>
 
 		<div class="col-md-4 text-right">
@@ -168,7 +166,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small>within <em>$doc_id_2_work_name</em> $text_2_doc_pos of $text_2_doc_count</small>
+		  <small>within <em>$doc_id_2_work_name</em>:<br>doc #$text_2_doc_pos of $text_2_doc_count</small>
 		</div>
 
 		<div class="col-md-2">
@@ -218,9 +216,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small id="sim-status-right">
-			most similar #$sim_rank_of_2_for_1 of $N_sw_w for <em>$doc_id_1</em>
-		  </small>
+		  <small>for <em>$doc_id_1</em>:<br>most similar #$sim_rank_of_2_for_1 of $N_sw_w</small>
 		</div>
 
 		<div class="col-md-4 text-right">
