--- a/templates/textView.html
+++ b/templates/textView.html
@@ -31,7 +31,7 @@
 							</div>
 
 							<div class="col-md-8 col-xs-8">
-			                    <div class="navbar-header" id="hiddenActionTitle">
+			                    <div class="navbar-header">
 			                        <a class="navbar-brand">: {{ page_subtitle }}</a>
 			                    </div>
 							</div>
