chore: tiny changes for consistency

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<form method="get" action="topicAdjust">
-					<input type="submit" class="btn btn-block btn-primary" value="Relabel Topics" />
+					<input type="submit" class="btn btn-block btn-primary" value="Adjust Topic Labels" />
 				</form>
 				<p style="text-align:center;"><i>Adjust LDA topic labels <br> according to your own understanding</i></p>
 			</div>
