--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -15,7 +15,7 @@
 		data-last="$last_doc_id_1">
 
 	  <h1>
-		<span title="$doc_section_1">$doc_id_1</span>
+		<span title="$text_1_display_name, {$doc_section_1}">$doc_id_1</span>
 		<small><sup>
 		  (<a href="docExplore?doc_id=$doc_id_1">docExpl</a>)
 		  (<a href="textView?doc_id=$doc_id_1">txtVw</a>)
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small>within <em>$doc_id_1_work_name</em>:<br>doc #$text_1_doc_pos of $text_1_doc_count</small>
+		  <small>within <em title="$text_1_display_name">$doc_id_1_work_name</em>:<br>doc #$text_1_doc_pos of $text_1_doc_count</small>
 		</div>
 
 		<div class="col-md-2">
@@ -128,7 +128,7 @@
 		data-last="$last_doc_id_2">
 
 	  <h1>
-		<span title="$doc_section_2">$doc_id_2</span>
+		<span title="$text_2_display_name, {$doc_section_2}">$doc_id_2</span>
 		<small><sup>
 		  (<a href="docExplore?doc_id=$doc_id_2">docExpl</a>)
 		  (<a href="textView?doc_id=$doc_id_2">txtVw</a>)
@@ -166,7 +166,7 @@
 		</div>
 
 		<div class="col-md-4 text-center">
-		  <small>within <em>$doc_id_2_work_name</em>:<br>doc #$text_2_doc_pos of $text_2_doc_count</small>
+		  <small>within <em title="$text_2_display_name">$doc_id_2_work_name</em>:<br>doc #$text_2_doc_pos of $text_2_doc_count</small>
 		</div>
 
 		<div class="col-md-2">
