chore: draw box around similarity scores

--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -255,7 +255,8 @@
 
 <div class="row">
 
-	<span style="text-align: center;">
+	<div class="panel panel-default">
+      <div class="panel-body" style="padding: 10px; text-align: center;">
 		<h2>Similarity Scores</h2>
 		<table class='display' style="margin-left: auto; margin-right: auto; text-align: center;">
 			<tr>
@@ -279,7 +280,8 @@
 				<td><h2><small>Vector cosine similarity (0.0–1.0)</small></h2></td>
 			</tr>
 		</table>
-	</span>
+	  </div>
+	</div>
 </div>
 
 </br>
