fix: eliminate wrong option values

--- a/templates/docCompare.html
+++ b/templates/docCompare.html
@@ -43,24 +43,24 @@
 					<div class="row">
 						<div class="col-md-2">
 							<select name="text_abbreviation_input_1" id="text_abbreviation_input_1" class="form-control">
-								<option value="{{ text_abbreviation_1 }}" size="15" selected="selected">Select text</option>
+								<option value="" size="15" selected>Select text</option>
 							</select>
 						</div>
 						<div class="col-md-3">
 							<select name="local_doc_id_input_1" id="local_doc_id_input_1" class="form-control">
-								<option value="{{ local_doc_id_1 }}" size="15" selected="selected">Select doc id</option>
+								<option value="" size="15" selected>Select doc id</option>
 							</select>
 						</div>
 						<div class="col-md-1">
 						</div>
 						<div class="col-md-2">
 							<select name="text_abbreviation_input_2" id="text_abbreviation_input_2" class="form-control">
-								<option value="{{ text_abbreviation_2 }}" size="15" selected="selected">Select text</option>
+								<option value="" size="15" selected>Select text</option>
 							</select>
 						</div>
 						<div class="col-md-3">
 							<select name="local_doc_id_input_2" id="local_doc_id_input_2" class="form-control">
-								<option value="{{ local_doc_id_2 }}" size="15" selected="selected">Select doc id</option>
+								<option value="" size="15" selected>Select doc id</option>
 							</select>
 						</div>
 						<div class="col-md-1">
